Fixed overlap bug / cleanup css

--- a/src/components/Model.css
+++ b/src/components/Model.css
@@ -33,7 +33,6 @@
 
 .Model .content .sidebar,
 .Model .content .sidebar2 {
-  overflow: hidden;
   width: 240px;
   flex: 0 0 auto;
 }
