--- a/src/components/UI/Visualization/JSON.css
+++ b/src/components/UI/Visualization/JSON.css
@@ -16,7 +16,6 @@ table.greyGridTable td,
 table.greyGridTable th {
   border: 1px solid #e3e3e3;
   padding: 1px 4px;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 
